--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timesport",
-  "version": "1.0.0",
+  "version": "1.4.1",
   "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
@@ -17,6 +17,7 @@
     "expo-background-fetch": "~13.0.5",
     "expo-keep-awake": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "^12.0.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.2.0",
