--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.7.0"
+    "react-native-screens": "^4.7.0",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
