🔧 ➕ 0.8.5| Update app configuration IOS and add expo-notifications dependency

--- a/app.json
+++ b/app.json
@@ -21,6 +21,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "ios": {
+      "supportsTablet": true,
+      "infoPlist": {
+      "UIBackgroundModes": ["audio"]
+        }
+    },
       "intentFilters": [
         {
           "action": "VIEW",
