--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "expo": "~52.0.35",
     "expo-av": "~15.0.2",
     "expo-background-fetch": "~13.0.5",
+    "expo-dev-client": "~5.0.20",
     "expo-keep-awake": "~14.0.2",
+    "expo-notifications": "^0.29.14",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "^12.0.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.7.0",
-    "expo-dev-client": "~5.0.20"
+    "react-native-screens": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
